--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 					>Nasa's Planetary Fact Sheet - Metric</a
 				>).
 			</caption>
+			<colgroup>
+				<col span="2" />
+				<col style="border: 3px solid black" />
+			</colgroup>
 			<thead>
 				<td colspan="2">&nbsp;</td>
 				<th scope="col">Name</th>
